Enhanced the project

--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
         </p>
     </div>
 
-    <div class="stars">
-        <div class="magna card">
+    <div class="suns card">
+        <div class="magna item-card">
             <h1 data-value="MAGNA">Magna</h1>
             <p>An F-class star that's the biggest in the system.</p>
         </div>
-
-        <div class="parvus card">
+        <div class="parvus item-card">
             <h1 data-value="PARVUS">Parvus</h1>
             <p>An M class star and the smallest one in the system.</p>
         </div>
@@ -34,18 +33,45 @@
     </div>
 
     <div class="planets card">
-        <div>
+        <div class="item-card">
             <h1 data-value="CATULA">Catula</h1>
             <p>A small, icy terrestrial planet that's the closest one to Eureka. At 3.202 AU</p>
         </div>
-        <div>
+        <div class="item-card">
             <h1 data-value="VIGIL">Vigil</h1>
             <p>Class 2 giant, is important since it catches minor celestial objects within its gravitational pull to keep Eureka safe, average temperature is -72.118°C, it also has 217 moons. At 7.205 AU</p>
         </div>
-        <div>
+        <div class="item-card">
             <h1 data-value="LONGE">Longe</h1>
             <p> Icy gas dwarf, the farthest one, and has 13 moons.</p>
         </div>
+    </div>
+
+    <div>
+        <h1 data-value="MORE ABOUT EUREKA:">More about Eureka</h1>
+
+        <p class="add">Composition of Eureka:</p>
+        <ul>
+            <li>Iron: 32.1%</li>
+            <li>Oxygen: 30%</li>
+            <li>silicon: 15.1%</li>
+            <li>Magnesium: 13.9%</li>
+            <li>sulfur: 2.9%</li>
+            <li>Nickel: 1.8%</li>
+            <li>Calcium: 1.5%</li>
+            <li>Aluminum: 1.4%</li>
+            <li>Dihydrogen oxide (water): 0.03%</li>
+            <li>Other: 1.17%</li>
+        </ul>
+        <p class="add">Atmosphere composition:</p>
+        <ul>
+            <li>Nitrogen (N2): 68%</li>
+            <li>Oxygen (O2): 27%</li>
+            <li>Water Vapor (H2O): 4%</li>
+            <li>Carbon Dioxide (CO2): 0.8%</li>
+            <li>Methane (CH4): 0.2%</li>
+            <li>Trace Gases (Including Argon, Neon, and others): 0.2%</li>
+        </ul>
     </div>
 
     <script src="script.js"></script>
