--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
     <div>
         <h1 data-value="MORE ABOUT EUREKA:">More about Eureka</h1>
 
-        <p class="add">Composition of Eureka:</p>
+      <div class="add">  
+       <div class="ind">
+        <p>Composition of Eureka:</p>
         <ul>
             <li>Iron: 32.1%</li>
             <li>Oxygen: 30%</li>
@@ -63,7 +65,10 @@
             <li>Dihydrogen oxide (water): 0.03%</li>
             <li>Other: 1.17%</li>
         </ul>
-        <p class="add">Atmosphere composition:</p>
+       </div>
+
+       <div class="ind">
+        <p>Atmosphere composition:</p>
         <ul>
             <li>Nitrogen (N2): 68%</li>
             <li>Oxygen (O2): 27%</li>
@@ -72,6 +77,8 @@
             <li>Methane (CH4): 0.2%</li>
             <li>Trace Gases (Including Argon, Neon, and others): 0.2%</li>
         </ul>
+        </div>
+    </div>
     </div>
 
     <script src="script.js"></script>
