--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="suns card">
         <div class="magna item-card">
             <h1 data-value="MAGNA">Magna</h1>
-            <p>An F-class star that's the biggest in the system.</p>
+            <p>An F class star that's the biggest in the system.</p>
         </div>
         <div class="parvus item-card">
             <h1 data-value="PARVUS">Parvus</h1>
