--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
 </head>
 <body>
 
+    <embed name="space-music" src="../space_music.mp3" loop="true" hidden="true" autostart="true"> 
+
     <div class="intro">
+        <img src="../eureka-removebg-preview.png">
+        <div class="eureka-planet">
         <h1 data-value="EUREKA">Eureka</h1>
         <p class="text">
         "Eureka" is a terrestrial planet that's slightly larger than Earth (1.279), and has a slightly higher amount of water. At first, it was just a rogue planet that was cold and wondering around space, however, Eureka has been pulled into a solar system by the 2 stars.
-        </p>
+        </p></div>
     </div>
 
     <div class="suns card">
         <div class="magna item-card">
+            <img src="">
             <h1 data-value="MAGNA">Magna</h1>
             <p>An F class star that's the biggest in the system.</p>
         </div>
@@ -34,10 +39,12 @@
 
     <div class="planets card">
         <div class="item-card">
+            <img src="../catula.jpg">
             <h1 data-value="CATULA">Catula</h1>
             <p>A small, icy terrestrial planet that's the closest one to Eureka. At 3.202 AU</p>
         </div>
         <div class="item-card">
+            <img src="../vigil.png" width="300px" height="300px">
             <h1 data-value="VIGIL">Vigil</h1>
             <p>Class 2 giant, is important since it catches minor celestial objects within its gravitational pull to keep Eureka safe, average temperature is -72.118°C, it also has 217 moons. At 7.205 AU</p>
         </div>
