--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 
     <div class="suns card">
         <div class="magna item-card">
-            <img src="">
+            <img src="../Magna.png">
             <h1 data-value="MAGNA">Magna</h1>
             <p>An F class star that's the biggest in the system.</p>
         </div>
         <div class="parvus item-card">
+            <img src="../PARVUS.png">
             <h1 data-value="PARVUS">Parvus</h1>
             <p>An M class star and the smallest one in the system.</p>
         </div>
@@ -49,6 +50,7 @@
             <p>Class 2 giant, is important since it catches minor celestial objects within its gravitational pull to keep Eureka safe, average temperature is -72.118°C, it also has 217 moons. At 7.205 AU</p>
         </div>
         <div class="item-card">
+            <img src="../LONGE-removebg-preview.png" width="300px" height="300px">
             <h1 data-value="LONGE">Longe</h1>
             <p> Icy gas dwarf, the farthest one, and has 13 moons.</p>
         </div>
@@ -79,14 +81,25 @@
         <ul>
             <li>Nitrogen (N2): 68%</li>
             <li>Oxygen (O2): 27%</li>
-            <li>Water Vapor (H2O): 4%</li>
+            <li>💧Water Vapor (H2O): 4%</li>
             <li>Carbon Dioxide (CO2): 0.8%</li>
             <li>Methane (CH4): 0.2%</li>
             <li>Trace Gases (Including Argon, Neon, and others): 0.2%</li>
         </ul>
         </div>
+        <div class="map">
+            <p>Map of Eureka</p>
+            <img src="../image.png" width="auto" height="300px">
+        </div>
     </div>
     </div>
+
+    <footer>
+        </a>
+        <a href="https://www.spaceappschallenge.org/" target="_blank" class="footer-image">
+          <img src="../space.png" alt="nasa">
+        </a>
+    </footer>
 
     <script src="script.js"></script>
 
