Fixed the images problem

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 
-    <embed name="space-music" src="../space_music.mp3" loop="true" hidden="true" autostart="true"> 
+    <embed name="space-music" src="space_music.mp3" loop="true" hidden="true" autostart="true"> 
 
     <div class="intro">
-        <img src="../eureka-removebg-preview.png">
+        <img src="eureka-removebg-preview.png">
         <div class="eureka-planet">
         <h1 data-value="EUREKA">Eureka</h1>
         <p class="text">
@@ -23,12 +23,12 @@
 
     <div class="suns card">
         <div class="magna item-card">
-            <img src="../Magna.png">
+            <img src="Magna.png">
             <h1 data-value="MAGNA">Magna</h1>
             <p>An F class star that's the biggest in the system.</p>
         </div>
         <div class="parvus item-card">
-            <img src="../PARVUS.png">
+            <img src="PARVUS.png">
             <h1 data-value="PARVUS">Parvus</h1>
             <p>An M class star and the smallest one in the system.</p>
         </div>
@@ -40,17 +40,17 @@
 
     <div class="planets card">
         <div class="item-card">
-            <img src="../catula.jpg">
+            <img src="catula.jpg">
             <h1 data-value="CATULA">Catula</h1>
             <p>A small, icy terrestrial planet that's the closest one to Eureka. At 3.202 AU</p>
         </div>
         <div class="item-card">
-            <img src="../vigil.png" width="300px" height="300px">
+            <img src="vigil.png" width="300px" height="300px">
             <h1 data-value="VIGIL">Vigil</h1>
             <p>Class 2 giant, is important since it catches minor celestial objects within its gravitational pull to keep Eureka safe, average temperature is -72.118°C, it also has 217 moons. At 7.205 AU</p>
         </div>
         <div class="item-card">
-            <img src="../LONGE-removebg-preview.png" width="300px" height="300px">
+            <img src="LONGE-removebg-preview.png" width="300px" height="300px">
             <h1 data-value="LONGE">Longe</h1>
             <p> Icy gas dwarf, the farthest one, and has 13 moons.</p>
         </div>
@@ -89,7 +89,7 @@
         </div>
         <div class="map">
             <p>Map of Eureka</p>
-            <img src="../image.png" width="auto" height="300px">
+            <img src="image.png" width="auto" height="300px">
         </div>
     </div>
     </div>
@@ -97,7 +97,7 @@
     <footer>
         </a>
         <a href="https://www.spaceappschallenge.org/" target="_blank" class="footer-image">
-          <img src="../space.png" alt="nasa">
+          <img src="space.png" alt="nasa">
         </a>
     </footer>
 
