--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <ul>
             <li>Nitrogen (N2): 68%</li>
             <li>Oxygen (O2): 27%</li>
-            <li>💧Water Vapor (H2O): 4%</li>
+            <li>Water Vapor (H2O): 4%</li>
             <li>Carbon Dioxide (CO2): 0.8%</li>
             <li>Methane (CH4): 0.2%</li>
             <li>Trace Gases (Including Argon, Neon, and others): 0.2%</li>
