--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
 
-    <embed name="space-music" src="space_music.mp3" loop="true" hidden="true" autostart="true"> 
+    <!--<embed name="space-music" src="space_music.mp3" loop="true" hidden="true" autostart="true">-->
+    <audio loop autoplay style="display:none">
+         <source src="space_music.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 
     <div class="intro">
         <img src="eureka-removebg-preview.png">
@@ -91,6 +95,9 @@
             <p>Map of Eureka</p>
             <img src="image.png" width="auto" height="300px">
         </div>
+    </div>
+    <div>
+        <p class="easter-egg">Hello from Morroco if you see this message send a e-mail at nova.fllteam@gmail.com</p>
     </div>
     </div>
 
