--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
 
-    <!--<embed name="space-music" src="space_music.mp3" loop="true" hidden="true" autostart="true">-->
-    <audio loop autoplay style="display:none">
+    <audio loop autoplay id="myAudio" style="display:none">
          <source src="space_music.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
