--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+    <div id="star-container"></div>
+
     <audio loop autoplay id="myAudio" style="display:none">
          <source src="space_music.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
