--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="info">
-        <p class="text">Eureka settled into orbit at 1.357 AU which is in the habitable zone for this system. One year on this planet is 470 Earth days, the surface temperature is around 11°C, and it has 30 tectonic plates, 5 of which are continental and 25 that are oceanic. About 85% of its surface is water. The system that Eureka is in has 3 additional planets that were formed there:</p>
+        <p class="text">Eureka settled into orbit at 1.357 AU which is in the habitable zone for this system. One year on this planet is 470 Earth days, the surface temperature is around 11°C, and it has 30 tectonic plates, 5 of which are continental and 25 that are oceanic. About 85% of its surface is water. Additionally, it has one large moon that is the same blue as sodalite (royal blue), orbits Eureka every 36 earth days, and is tidally locked.The system that Eureka is in has 3 additional planets that were formed there:</p>
     </div>
 
     <div class="planets card">
